# yqueue

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
cmake/: yqueue-config.cmake.in
src/YQueue/: Defines.h  FConsumer.h  HashMap.h  IConsumer.h  Processor.h  Queue.h  TypeTraits.h  Utils.h
tests/: CMakeLists.txt  HashMapTests.cpp  ProcessorTests.cpp  QueueTests.cpp  Testing.h  TypeTraitsTests.cpp  UtilsTests.cpp
